Styled the home page

--- a/style.css
+++ b/style.css
@@ -1,23 +1,3 @@
-.red {
-  color: #d35366;
-}
-
-.grey {
-  color: #888888;
-}
-
-.dark-grey {
-  color: #383838;
-}
-
-.white {
-  color: white;
-}
-.main-section {
-  background-color: #d35366;
-  height: 100%;
-}
-
 @import url(//db.onlinewebfonts.com/c/5d6f50ed2dde0e4ad455448f896c09f0?family=Gotham);
 @import url(//db.onlinewebfonts.com/c/0e6de1ec911a2e267ff136bbdd384a44?family=Helvetica+Neue);
 
@@ -61,7 +41,284 @@ nav {
   justify-content: center;
 }
 
-.logo {
-  width: 100px;
-  height: 100px;
+a,
+.nav-list a,
+h1,
+h2,
+h3,
+h6,
+p,
+.line-through {
+  color: rgb(136, 136, 136);
 }
+
+.nav-list a {
+  padding: 0 0.5rem;
+}
+
+.socials a {
+  color: #888;
+  font-size: 1.4rem;
+  padding: 0 0.3rem;
+  border: 0.05rem solid #888;
+  border-radius: 3rem;
+  background-color: #383838;
+}
+
+.footer-bottom span,
+.footer-bottom a,
+.footer-bottom small,
+.footer-list li {
+  color: #888;
+}
+
+.nav-list a:hover {
+  text-decoration: none;
+}
+
+.navbar-collapse {
+  width: 5rem;
+}
+
+.nav-list a:hover,
+.title,
+.make,
+.price,
+.carousel-arrow {
+  color: #d35266;
+}
+
+.carousel-body p {
+  line-height: 1.5;
+}
+
+.btn {
+  background-color: #d35266;
+}
+
+.btn:hover {
+  background-color: #830c1e;
+}
+
+.logo {
+  width: 4rem;
+  height: 4rem;
+}
+
+.main-container {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  max-width: 1310px;
+  margin: 0 auto;
+}
+
+.background {
+  background-color: #d35266;
+  background-position: center;
+  width: 100%;
+  height: 30rem;
+}
+
+/* .logo-img{
+  width: 150px;
+  height: 150px;
+} */
+
+.home-heading-con {
+  max-width: max-content;
+  margin: auto;
+  position: relative;
+  top: 3rem;
+}
+
+.home-heading {
+  font-size: small;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.text-area {
+  height: 2.4rem;
+}
+
+.main-form {
+  padding-top: 8rem;
+}
+
+.search-btn {
+  padding: 0.4rem 0.5rem;
+}
+
+.carousel-inner {
+  width: 90%;
+}
+
+.carousel-item img {
+  width: 25rem;
+  height: 15rem;
+}
+
+.carousel-sec {
+  margin: 0 2rem;
+}
+
+.card img {
+  height: 15rem;
+}
+
+.price {
+  font-weight: bold;
+}
+
+.line-through {
+  text-decoration: line-through;
+}
+
+.accessory,
+.headwear {
+  display: grid;
+  grid-template-columns: 0.1fr 1fr 1fr 1fr 1fr 0.1fr;
+  grid-gap: 1rem;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-around;
+}
+
+.border-bottom {
+  width: 97%;
+}
+
+.arrow {
+  padding-top: 12rem;
+}
+
+.footer-logo {
+  width: 2rem;
+  height: 2rem;
+}
+
+.footer-bottom a:hover {
+  color: #d35266;
+}
+
+.socials a:first-child:hover {
+  color: rgb(63, 92, 154);
+}
+
+.socials a:nth-child(2):hover {
+  color: rgb(23, 148, 228);
+}
+
+.socials a:nth-child(3):hover {
+  color: rgb(156, 45, 186);
+}
+
+.socials a:nth-child(4):hover {
+  color: rgb(49, 67, 88);
+}
+
+.socials a:nth-child(5):hover {
+  color: rgb(0, 119, 177);
+}
+
+.footer-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: #383838;
+}
+
+.footer-bottom h2 {
+  color: white;
+}
+
+.footer-list {
+  display: flex;
+  justify-content: center;
+  background-color: #383838;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+  min-width: 383px;
+  width: 100%;
+  max-width: 600px;
+  justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 1214px) {
+  .flex-container {
+    justify-content: space-around !important;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .footer-bottom-info {
+    width: 18rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .accessory,
+  .headwear {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .dropdown {
+    display: none;
+  }
+
+  .carousel-body {
+    padding-left: 0 !important;
+  }
+
+  .footer-bottom-info {
+    width: 12rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .first-card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .carousel-pad img {
+    width: 100%;
+  }
+
+  .footer-bottom h2 {
+    font-size: 0.7rem;
+  }
+
+  .price {
+    font-size: 0.5rem;
+  }
+
+  .flex-container {
+    width: 100%;
+    max-width: 100%;
+    padding-left: 6rem;
+  }
+
+  .help {
+    font-size: 0.5rem !important;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .text-area {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 260px) {
+  .help {
+    font-size: 0.2rem !important;
+  }
+}
+
