Styled the search results

--- a/styles/search.css
+++ b/styles/search.css
@@ -55,8 +55,8 @@ aside {
   height: 50px;
 }
 
-.search-main h3,
-.search-main p,
+.search-item h3,
+.search-item p,
 aside {
   line-height: 1.7;
 }
