--- a/styles/search.css
+++ b/styles/search.css
@@ -1,5 +1,6 @@
 @import url(//db.onlinewebfonts.com/c/5d6f50ed2dde0e4ad455448f896c09f0?family=Gotham);
 @import url(//db.onlinewebfonts.com/c/0e6de1ec911a2e267ff136bbdd384a44?family=Helvetica+Neue);
+
 @font-face {
   font-family: "Gotham Rounded";
   src: url("//db.onlinewebfonts.com/t/1549fe8fd297f1e6501a3d6ad7f77394.eot");
@@ -40,7 +41,7 @@ aside {
   font-size: large;
 }
 
-.search-item
+.search-item,
 h3,
 .search-item p,
 aside {
