--- a/styles/search.css
+++ b/styles/search.css
@@ -238,10 +238,6 @@ aside {
     font-size: large;
   }
 
-  .background {
-    display: none;
-  }
-
   .footer-top {
     display: flex;
     flex-direction: column;
@@ -257,12 +253,14 @@ aside {
 }
 
 @media only screen and (max-width: 700px) {
-  .nav-logo {
-    display: none;
-  }
-
   .search-results {
     font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .company-logo {
+    display: none;
   }
 }
 
@@ -280,6 +278,12 @@ aside {
   .search-results {
     width: 90%;
     font-size: 0.5rem;
+  }
+
+  .main-form {
+    width: 80%;
+    margin: 0 auto;
+    font-size: smaller;
   }
 }
 
@@ -301,6 +305,21 @@ aside {
   .footer-top {
     font-size: 0.7rem;
   }
+
+  .main-form {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .text-area {
+    width: 50%;
+    font-size: xx-small;
+    padding: 0 5px !important;
+  }
+
+  .footer {
+    font-size: 0.5rem;
+  }
 }
 
 @media only screen and (max-width: 295px) {
@@ -311,6 +330,22 @@ aside {
   .card-title,
   .card-text,
   .footer-bottom {
+    font-size: 0.7rem;
+  }
+
+  .main-form {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .search-btn,
+  .text-area {
+    width: 60%;
+    font-size: 0.45rem;
+    padding: 0 5px !important;
+  }
+
+  .footer {
     font-size: 0.7rem;
   }
 }
